# 2023CAPSTONE_AutoCar_in_Ros2

./: README.md
AutoCarROS2/: README.md  requirements.sh  requirements.txt  ros-foxy-desktop-full-install.sh
AutoCarROS2/autocar_description/rviz/: view.rviz
AutoCarROS2/autocar_description/urdf/: autocar.urdf  autocar.xacro  my_robot.xacro
AutoCarROS2/autocar_gazebo/worlds/: autocar.world  odom.world
AutoCarROS2/autocar_map/: CMakeLists.txt  package.xml
AutoCarROS2/autocar_map/data/: 5181.csv  KC_base.csv  ST_base.csv  circle.csv  circuit.csv  (+9 more)
AutoCarROS2/autocar_msgs/: CMakeLists.txt
AutoCarROS2/autocar_nav/: CMakeLists.txt
AutoCarROS2/autocar_odom/: CMakeLists.txt  package.xml
AutoCarROS2/autocar_route/: CMakeLists.txt  package.xml
darknet_ros/darknet_ros/: CMakeLists.txt
erp_control/: setup.py
erp_control/erp_control/: ERP42_ros2.py  delay_test.py  erp_client.py  erp_publish.py  filter_test.py  simul_plot.py
imu/param/: xsens_mti_node.yaml
lanenet/: camera_pub.py  lanenet.py
lanenet/models/: tusimple_18.pth
lanenet/ultrafastLaneDetector/: perspective_transformation.py  ultrafastLaneDetector.py
lidar/adaptive_clustering/: CMakeLists.txt  package.xml
lidar/adaptive_clustering/src/: adaptive_clustering_v1.cpp  lidar_extract_channel.py
lidar/av_toolkit_custom_msgs/: CMakeLists.txt
v4l2_camera/: CMakeLists.txt
yolov7/: delivery.py  forward.py  lanenet.py  side.py  tesseract.py  trafficlight.py  trafficlight_origin.py  vid2bag.py  yolo_ros1.py  yolo_ros2.py
yolov7/weights/: delivery.pt  tf_best.pt  tf_last.pt  trafficlight.pt
(+118 files in other folders)
